iptables
#!/bin/bash
[[ -e /etc/default/iptables ]] && source /etc/default/iptables

function output()
{
        if [[ "${1}" == "-n" ]]; then
                cat
        else
                iptables-restore
        fi
}

(
echo "
*nat
# Allow masquerading connections as from wan interface:
-A POSTROUTING -o wan -j MASQUERADE

# Don't delete the 'COMMIT' line or these nat table rules won't be processed
COMMIT

*filter
-N REJECTED

# Default iptables policies:
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]

# Drop everything coming from user VPN:
-A OUTPUT ! -o lo -m owner --uid-owner vpn -j DROP
                
# policy for TCP-Reset/UDP-Reject as alternative to \"-j DROP\""
[[ "${LOG_FIREWALL_REJECT:-"n"}" =~ (y|Y) ]] && echo "-A REJECTED -m limit --limit 10/min -j LOG --log-prefix "NETFILTER4-REJECTED: " --log-level 4"
echo \
'-A REJECTED -p tcp -j REJECT --reject-with tcp-reset
-A REJECTED -p udp -j REJECT --reject-with icmp-port-unreachable
-A REJECTED -j DROP

# SSH with rate-limit (replacing hosts.allow) on all connections.
# Allow only 4 connection attempts within 1 minute for SSH.
-I INPUT -p tcp --dport 22 ! -i wan -m state --state NEW -m recent --set
-I INPUT -p tcp --dport 22 ! -i wan -m state --state NEW -m recent --update --seconds 60 --hitcount 4 -j REJECTED

# Allow incoming established and/or related connections from WAN.  Drop everything else.
-A INPUT -i wan -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i wan -j DROP

# Do not forward DNS over TLS connections on port 853 to WAN interface:
-A FORWARD -i wan -m tcp -p tcp --dport 853 -j DROP
-A FORWARD -i wan -m udp -p udp --dport 853 -j DROP

# Block Teredo stuff
-I FORWARD -p udp --dport 3544 -j REJECTED
-I FORWARD -p udp --sport 3544 -j REJECTED
# Block IPv6 Encapsulation
-A FORWARD -p 41 -j REJECTED
# Block Routing Header for IPv6
-A FORWARD -p 43 -j REJECTED
# Block Fragment Header for IPv6
-A FORWARD -p 44 -j REJECTED
# Block ICMP for IPv6
-A FORWARD -p 58 -j REJECTED
# Block No Next Header for IPv6
-A FORWARD -p 59 -j REJECTED
# Block Destination Options for IPv6
-A FORWARD -p 60 -j REJECTED

# Forward incoming established and/or related connections from WAN.  Drop everything else.
-A FORWARD -i wan -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -i wan -j DROP

# Don't delete the 'COMMIT' line or these nat table rules won't be processed
COMMIT'
) | output $1
